changed the disclosure option retireval request to a GET, changed the request and response bodies